style.css
/* ... */
.hero-info{
    position: relative;
    max-width: 600px;
}

/* Hero 
.hero-section{
    position: relative;
    display: flex;
    width: 100%;
    height: 75vh;
    align-items: center;
    justify-content: space-between;
}

.hero-info{
    position: absolute;
    left: 5%;
}
*/    

.hero-info h1{
    font-size: 60px;
    max-width: 600px;
    font-weight: 700;
    line-height: 70px;
    margin-top: 100px;
    margin-bottom: 30px;
}

.hero-info p{
    max-width: 550px;
    line-height: 25px;
    margin-bottom: 30px;
    font-size: 20px;
    color: #283F53;
    font-weight: bold;
}

.hero-info a{
    text-decoration: none;
}

.hero-info button{
    color: #E8E5DA;
    padding: 15px 35px;
    border-radius: 10px;
    border: 1px solid #283F53;
    background-color: #497597;
    box-shadow: 0 0 5px #283F53;
    cursor: pointer;
    transition: 0.3s;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 3px;
}

.hero-info button:hover{
    box-shadow: 0 0 15px #283F53;
    opacity: 0.7;
}

/* Projects */
.projects-section{
    display: flex;
    flex-direction: column;
    gap: 10%;
    align-items: center;
    position: relative;
    width: 80%;
    height: 100vh;
    margin-top: 200px;
    margin-bottom: 700px;
}

.project-card{
    display: flex;
    width: 100%;
    height: 40%;
    align-items: center;
    gap: 10%;
    justify-content: center;
}

.project-videobox{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 50%;
    position: relative;
    cursor: pointer;
    min-width: 400px;
    transition: 0.5s;

}

.project-videobox video{
    object-fit: cover;
    width: 100%;
    box-shadow: 0 0 10px #283F53;
    border-radius: 20px;
    transition: 0.5s;
}

.project-videobox video:hover{
    box-shadow: 0 0 20px #283F53;
}

.project-info{
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    width: 50%;
    padding-left: 10%;
}

.project-info h1{
    font-size: 25px;
    font-weight: bold;
    text-wrap: nowrap;
    margin-bottom: 10px;
    margin-top: 0;
    max-width: 450px;
}

.project-info p{
    color: #283F53;
    width: 90%;
    font-size: 15px;
    max-width: 400px;
    min-width: 300px;
    margin-bottom: 50px;
    margin-top: 0;
}

.project-info button{
    color: white;
    padding: 10px 15px;
    border-radius: 10px;
    border: 1px solid #283F53;
    background-color: #497597;
    box-shadow: 0 0 5px #283F53;
    cursor: pointer;
    transition: 0.3s;
}

.project-info button:hover{
    box-shadow: 0 0 15px #283F53;
    opacity: 0.7;
}

.hover-sign{
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 30%;
    height: 100px;
}

.hover-sign::before,
.hover-sign::after{
    content: "👆";
    text-align: center;
    position: absolute;
    font-size: 50px;
    top: 20%;
    left: 40%;
    border-radius: 50%;
    animation: hoverAnimation 3s ease-in-out infinite;
}

@keyframes hoverAnimation{
    0%{
        box-shadow: 0 0 5px #283F53;
        transform: translate(100%, 50%) rotate(30deg);
    }
    100%{
        box-shadow: 0 0 15px #283F53;
        transform: translateX(80%, 50%) rotate(0deg);
    }
}

.hover-sign.active{
    display: none;
}

/* Skills */
.skills-section{
    display: flex;
    flex-direction: column;
    gap: 5%;
    align-items: center;
    position: relative;
    width: 80%;
    height: 75vh;
}

.skills-section h1{
    margin-bottom: 100px;
}

/* Slider */
.slider{
    position: relative;
    width: 100%;
    height: var(--height);
    overflow: hidden;
    mask-image: linear-gradient(
        to right,
        transparent,
        #000 10% 90%,
        transparent
    );
    opacity: 0.8;
}

.slider .list{
    display: flex;
    width: 100%;
    min-width: calc(var(--width) * var(--quantity));
    position: relative;
}

.slider .list .item{
    width: var(--width);
    height: var(--height);
    position: absolute;
    left: 100%;
    animation: autoRun 10s linear infinite;
    transition: filter 0.5s;
    animation-delay: calc((10s / var(--quantity)) * (var(--position) - 1) - 10s)!important;
}

.slider .list .item img{
    width: 100%;
}

@keyframes autoRun{
    from{
        left: 100%;
    }to{
        left: calc(var(--width) * -1);
    }
}

.slider:hover .item{
    animation-play-state: paused!important;
    filter: grayscale(1);
}

.slider .item:hover{
    filter: grayscale(0)
}

/* Contact Section */
.contact-section{
    width: 80%;
    min-height: 50vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10%;
    margin-bottom: 300px;
}

.contact-section h1{
    position: relative;
    text-align: center;
    margin-bottom: 100px;
}

.social-box{
    display: flex;
    flex-direction: column;
    gap: 25px;
}

.social-box a{
    display: flex;
    color: #283F53;
    text-decoration: none;
    font-size: 20px;
    text-wrap: nowrap;
    align-items: center;
    justify-content: center;
    font-weight: bold;
}

.social-box a:hover{
    box-shadow: 0 0 20px #497597;
    border-radius: 10px;  
}

.social-box i{
    color: inherit;
    font-size: 30px;
    margin-right: 10px;
}

/* Footer */

.footer{
    display: flex;
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    align-items: center;
    justify-content: center;
    height: 70px;
    z-index: 999;
}

footer h1{
    font-size: 16px;
    font-weight: normal;
    color:#283F53;
}

/* Menu */
.menu-icon{
    font-size: 25px;
    cursor: pointer;
    display: none;
    color: #283F53;
    transition: opacity 0.3s ease;
}

.hide-menu{
    opacity: 0;
    pointer-events: none;
}

/* Sidebar */
.sidebar{
    position: fixed;
    right: 0;
    top: 0;
    bottom: 70px;
    width: 0%;
    background-color: #497597;
    backdrop-filter: blur(10px);
    z-index: 999;
    box-shadow: 0 0 20px #283F53;
    border-bottom-left-radius: 100%;
    opacity: 0;
}
/* ... */

